// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > applies lightness multiplier to background 1`] = `
{
  "a": "#11160e",
  "b": "#1d231a",
}
`;

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#11160e",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#11180f",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#3e4b45",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#556562",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#66797b",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#748990",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#8097a2",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#8fa3ac",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#9daeb3",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#aab8ba",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#2d0b06",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#892212",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#ae3b24",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#c55037",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#cd6953",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d37c69",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#d98c7b",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#de9b8c",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e2a89b",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#0e1807",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#354f1c",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#4e6a33",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#657d4d",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#778d63",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#879975",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#95a585",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#a2b093",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#adbaa0",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#17150d",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4f482e",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#6b623f",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#81754b",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#938558",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#a29362",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#b09f6c",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#bdaa76",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#c6b482",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#101616",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#384e2c",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#54674b",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#6a7a61",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#7b8a74",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#8a9784",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#98a392",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#a4af9f",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#b0b8ab",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#19160c",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#504827",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#706041",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#89715c",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#9f7e73",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#b28a87",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#c29498",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#caa1a5",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#d1adb0",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#12170b",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#3b4e24",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#516930",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#617e3e",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#6f8e5e",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#7a9c79",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#84a891",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#8eb3a7",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#9bbdb2",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#1a1509",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#57461f",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#775e2a",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#8f7132",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#a28139",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#b38e3f",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#c29a45",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#caa65a",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d1b26f",
        },
      ],
    },
  ],
  "terminal": [
    "#11160e",
    "#892212",
    "#354f1c",
    "#4f482e",
    "#384e2c",
    "#504827",
    "#3b4e24",
    "#556562",
    "#3e4b45",
    "#d37c69",
    "#879975",
    "#a29362",
    "#8a9784",
    "#b28a87",
    "#7a9c79",
    "#8097a2",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#12130c",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#13140c",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#47483a",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#616251",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#747563",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#818674",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#8c9583",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#96a291",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#9eae9c",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#a9b8a9",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#28080a",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#881d23",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#b32f3b",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#c94754",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#d1616c",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#d7757f",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#dc868f",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#e0959d",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#e4a3aa",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#13140c",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#46492e",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#606341",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#73774f",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#83885a",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#919665",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#9da26d",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#a8ae78",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#b3b889",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#18130c",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#56442d",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#705e43",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#7f735a",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#8b846d",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#96927d",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#a29f8c",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#adaa9a",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b7b4a6",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#1c1207",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#3e4945",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#596360",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#6e7674",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#7e8683",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#8d9391",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#9a9f9e",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#a5aba9",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#b1b5b3",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#1b120a",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#613f30",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#85544c",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#a16362",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#b77173",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#c57f84",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#cc8e93",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#d29c9f",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#d8a8ac",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#131413",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#444845",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#5d6260",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#6d7674",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#7b8685",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#869594",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#92a1a1",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#9facac",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#aab6b6",
        },
      ],
    },
    {
      "name": "orange",
      "values": [
        {
          "contrast": 1,
          "name": "orange100",
          "value": "#1c110a",
        },
        {
          "contrast": 2,
          "name": "orange200",
          "value": "#633f22",
        },
        {
          "contrast": 3,
          "name": "orange300",
          "value": "#87552f",
        },
        {
          "contrast": 4,
          "name": "orange400",
          "value": "#a26638",
        },
        {
          "contrast": 5,
          "name": "orange500",
          "value": "#b97440",
        },
        {
          "contrast": 6,
          "name": "orange600",
          "value": "#c58451",
        },
        {
          "contrast": 7,
          "name": "orange700",
          "value": "#cc9265",
        },
        {
          "contrast": 8,
          "name": "orange800",
          "value": "#d29f78",
        },
        {
          "contrast": 9,
          "name": "orange900",
          "value": "#d8ab89",
        },
      ],
    },
  ],
  "terminal": [
    "#12130c",
    "#881d23",
    "#46492e",
    "#56442d",
    "#3e4945",
    "#613f30",
    "#444845",
    "#616251",
    "#47483a",
    "#d7757f",
    "#919665",
    "#96927d",
    "#8d9391",
    "#c57f84",
    "#869594",
    "#8c9583",
  ],
}
`;
